@startuml

title __ONBOARDING's Class Diagram__\n

  namespace com.sleepestapp.sleepest {
    namespace onboarding {
      class com.sleepestapp.sleepest.onboarding.OnboardingActivity {
          {static} + viewPager : ViewPager
          # onCreate()
      }
    }
  }
  

  namespace com.sleepestapp.sleepest {
    namespace onboarding {
      class com.sleepestapp.sleepest.onboarding.OnboardingViewPagerAdapter {
          ~ timer : Timer
          - context : Context
          - dots : List<ImageView>
          - durationHours : int
          - durationMinutes : int
          - enableStartApp : boolean
          - endTimeText : String
          - endTimeValueText : String
          - endtime : int
          - indicators : List<ImageView>
          - notFirstAppStart : boolean
          - startTimeText : String
          - startTimeValueText : String
          - starttime : int
          + OnboardingViewPagerAdapter()
          + destroyItem()
          + getCount()
          + instantiateItem()
          + isViewFromObject()
          + onClick()
          - checkAllPermissions()
      }
    }
  }
  

  com.sleepestapp.sleepest.onboarding.OnboardingActivity -up-|> androidx.appcompat.app.AppCompatActivity
  com.sleepestapp.sleepest.onboarding.OnboardingActivity o-- com.sleepestapp.sleepest.onboarding.OnboardingViewPagerAdapter : onboardingViewPagerAdapter
  com.sleepestapp.sleepest.onboarding.OnboardingViewPagerAdapter .up.|> android.view.View.OnClickListener
  com.sleepestapp.sleepest.onboarding.OnboardingViewPagerAdapter -up-|> androidx.viewpager.widget.PagerAdapter


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
